# se01

./: .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: README.md
configs/: base.yaml  qiskit_mvp_taxonomy.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  TASK_BREAKDOWN.md
sample_data/configs/: offline_pilot.toml  offline_smoke.toml  pilot.yaml  qiskit_runtime_manifest.toml
sample_data/docs/: README.md  qiskit_0_45_excerpts.json  qiskit_1_0_excerpts.json  qiskit_1_1_excerpts.json
sample_data/model_responses/: README.md  qiskit_saved_responses.json
sample_data/tasks/: README.md  qiskit_pilot_tasks.json
src/quantum_drift/: __init__.py
src/quantum_drift/cli/: __init__.py  main.py  summary.py
src/quantum_drift/config/: __init__.py  loader.py  paths.py
src/quantum_drift/datasets/: __init__.py  loader.py  validators.py
src/quantum_drift/evaluation/: __init__.py  artifacts.py  classification.py  metrics.py  pipeline.py  taxonomy.py
src/quantum_drift/execution/: __init__.py  artifacts.py  pipeline.py  runner.py  runtime.py
src/quantum_drift/generation/: __init__.py  artifacts.py  backends.py  pipeline.py  prompts.py
src/quantum_drift/models/: __init__.py  config.py  evaluation.py  execution.py  generation.py  tasks.py
src/quantum_drift/retrieval/: __init__.py
src/quantum_drift/rewrite/: __init__.py
src/quantum_drift/storage/: __init__.py
tests/: test_cli.py  test_evaluation.py  test_execution.py  test_generation.py  test_paths.py  test_sample_data.py  test_ui_dashboard.py
(+5 files in other folders)
