[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-drift"
version = "0.1.0"
description = "Reproducible Python research artifact for measuring quantum API drift in LLM-generated code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
authors = [
  { name = "OpenAI Codex" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<0.8",
]

[project.scripts]
quantum-drift = "quantum_drift.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["quantum_drift"]

[tool.coverage.run]
source = ["quantum_drift"]
branch = true
